added second color

--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="style/color.css">
 </head>
 <body>
+    <div>
     <h3>My first sempol wibsite</h3>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis eos voluptatibus recusandae, tempora repellendus quis iusto exercitationem voluptatum, ducimus officiis debitis, sit error corporis? Sequi autem iste laborum totam ipsam.</p>
+    </div>
+    <div>
+    <h3>My first sempol wibsite</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis eos voluptatibus recusandae, tempora repellendus quis iusto exercitationem voluptatum, ducimus officiis debitis, sit error corporis? Sequi autem iste laborum totam ipsam.</p>
+    </div>
+    <div>
+    <h3>My first sempol wibsite</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis eos voluptatibus recusandae, tempora repellendus quis iusto exercitationem voluptatum, ducimus officiis debitis, sit error corporis? Sequi autem iste laborum totam ipsam.</p>
+    </div>
 </body>
 </html>
