added my second and third color

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis eos voluptatibus recusandae, tempora repellendus quis iusto exercitationem voluptatum, ducimus officiis debitis, sit error corporis? Sequi autem iste laborum totam ipsam.</p>
     </div>
     <div>
-    <h3>My first sempol wibsite</h3>
+    <h3>My second sempol wibsite</h3>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis eos voluptatibus recusandae, tempora repellendus quis iusto exercitationem voluptatum, ducimus officiis debitis, sit error corporis? Sequi autem iste laborum totam ipsam.</p>
     </div>
     <div>
-    <h3>My first sempol wibsite</h3>
+    <h3>My third sempol wibsite</h3>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis eos voluptatibus recusandae, tempora repellendus quis iusto exercitationem voluptatum, ducimus officiis debitis, sit error corporis? Sequi autem iste laborum totam ipsam.</p>
     </div>
 </body>
