added a list to push cood

--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
     <h3>My third sempol wibsite</h3>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis eos voluptatibus recusandae, tempora repellendus quis iusto exercitationem voluptatum, ducimus officiis debitis, sit error corporis? Sequi autem iste laborum totam ipsam.</p>
     </div>
+    <div>
+        <h4>how to push incrementen add</h4>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a miningfull commit messeg"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
